--- a/roles/LOANIQDB/tasks/main.yml
+++ b/roles/LOANIQDB/tasks/main.yml
@@ -1,6 +1,6 @@
 - name: Copy FBLMT to target
   become_method: runas
-  win_shell: copy-item \\10.10.12.153\LOANIQ -destination C:\ -recurse
+  win_shell: copy-item "{{sourcemtappfolder}}" -destination "{{targetmtappfolder}}" -recurse
   become: yes
   become_user: svcEnkeDeployments@develop.fcbt
 
@@ -64,11 +64,34 @@
   become: yes
   become_user: svcEnkeDeployments@develop.fcbt
 
-- name: Encrypt the server\LS2APP.ini password
-  become_method: runas
-  win_shell: "cmd.exe /c C:\LOANIQ\SERVER\ls2util -util ENCR_PASS -pwd LIQPASSWORD -ini C:\LOANIQ\SERVER\LS2APP.ini > pwd.out"
-  become: yes
-  become_user: svcEnkeDeployments@develop.fcbt
+- name: 'Encrypt the LS2APP.ini password'
+  win_shell: "LS2UTIL -util ENCR_PASS -pwd {{ LIQPASSWORD }} -ini LS2APP.INI > pwd.out"
+  args:
+    chdir: C:\LOANIQ\SERVER\
+    executable: cmd
+
+ - name: 'Encrypt password'
+   win_shell: "SCRIPT.CMD"
+   args:
+     chdir: C:\LOANIQ\SERVER\
+     executable: cmd
+     stdin: "{{ LIQPASSWORD }}"
+   register: EncrypredPassword
+
+ - set_fact: pwd="{{ EncrypredPassword.stdout | trim }}"
+
+ - debug:
+     msg: "{{ pwd }}"
+
+ - name: 'Replace string'
+   win_lineinfile:
+     path: "{{ item.path }}"
+     regexp: "{{ item.sourceline }}"
+     line: "{{ item.targetline }}"
+   with_items:
+     - { path: "C:\\LOANIQ\\SERVER\\Tomcat\\conf\\context.xml", sourceline: "password=*.*", targetline: 'password="{{ pwd }}"'}
+     - { path: "C:\\LOANIQ\\SERVER\\Tomcat\\jrconf\\jsqlaccessproperties.xml", sourceline: '<entry key="DBDefaultPassword*', targetline: '<entry key="DBDafaultPassword">{{ pwd }}</entry>' }
+
 
 - name: Create C:\LOANIQ\CLIENT share and set permissions
   become_method: runas
