--- a/roles/MISYSBRD/tasks/main.yml
+++ b/roles/MISYSBRD/tasks/main.yml
@@ -1,13 +1,13 @@
 ---
-- hosts: source
-  gather_facts: false
+#- hosts: source
+#  gather_facts: false
   
-  vars_files:
-    - "vars/main.yml"
+#  vars_files:
+#    - "vars/main.yml"
 
 
-  tasks:
- # - name: Stop a service
+#  tasks:
+ # - name: Stop a service TapiSrv
  #   win_service:
  #     name: TapiSrv
  #     state: stopped
