NewUpdate main.yml

--- a/roles/MISYSBRD/tasks/main.yml
+++ b/roles/MISYSBRD/tasks/main.yml
@@ -1,22 +1,37 @@
 ---
-#- hosts: source
-#  gather_facts: false
-  
-#  vars_files:
-#    - "vars/main.yml"
 
-
-#  tasks:
- # - name: Stop a service TapiSrv
+ # - name: Stop a service
  #   win_service:
- #     name: TapiSrv
+ #     name: "{{ ServiceNameMisysboard }}"
  #     state: stopped
 
-   
-  - name: Create directory Release
+  
+  - name: Check that the LOANIQ folder exists
+    win_stat:
+      path: 'C:\LOANIQ'
+    register: stat_file
+
+
+  - name: Ensure Release folder exist
     win_file:
-      path: "{{releasmisysbrdefolder}}"
+      path: 'C:\\Releases\'
       state: directory
+    when: stat_file.stat.exists == True
+
+
+  - name: Ensure FBL folder exist
+    win_file:
+      path: "C:\\Releases\\FBL_{{ LatestRelese }}"
+      state: directory
+    when: stat_file.stat.exists == True
+
+
+  - name: Quick Backup to Release folder
+    win_shell: "mv C:\\LOANIQ C:\\Releases\\FBL_{{ LatestRelese }}"
+    become: true
+    become_method: runas
+    become_flags: logon_type=new_credentials logon_flags=netcredentials_only
+    when: stat_file.stat.exists == True
 
 
   - name: Create directory LOANIQ
@@ -24,34 +39,24 @@
       path: "{{targetmisysbrdefolder}}"
       state: directory
 
-
-  - name: Copy LOANIQ to Release
-    become_method: runas
-    win_shell: copy-item "{{targetamisysbrdefolder}}"  -destination "{{releasmisysbrdefolder}}" -recurse
-    become: yes
-    become_user: svcEnkeDeployments@develop.fcbt
    
-
   - name: Copy LOANIQ to target
     become_method: runas
     win_shell: copy-item "{{targetmisysboardnodefolder}}"  -destination "{{targetmisysbrdefolder}}" -recurse
-    become: yes
-    become_user: svcEnkeDeployments@develop.fcbt
-
+    become: true
+    
 
   - name: Change Hostname in mb-package.json
     become_method: runas
     win_shell: ((get-content -path C:\loaniq\Server\misysboard_node\mb-package.json -Raw) -replace "{{misysbrdesourceeapihost}}","{{misysbrdetargetapihost}}") | set-content -path  C:\loaniq\Server\misysboard_node\mb-package.json
-    become: yes
-    become_user: svcEnkeDeployments@develop.fcbt
-
+    become: true
+    
 
   - name: Change liqserver in mb-package.json
     become_method: runas
     win_shell: ((get-content -path C:\loaniq\Server\misysboard_node\mb-package.json -Raw) -replace "{{misysbrdesourceefblcmeqahost}}","{{misysbrdetargetenkefbldevhost}}") | set-content -path  C:\loaniq\Server\misysboard_node\mb-package.json
-    become: yes
-    become_user: svcEnkeDeployments@develop.fcbt
-  
+    become: true
+    
 
   - name: Change Hostname in config.json
     become_method: runas
@@ -59,37 +64,30 @@
       $json = Get-Content 'C:\loaniq\Server\misysboard_node\addons\fbl_common\config\generated\config.json' -raw | ConvertFrom-Json
       $json.connection | % {if($_.serverName -eq "{{hostnamesourcemisysbrde}}"){$_.serverName="{{hostnametargetmisysbrde}}"}}
       $json | ConvertTo-Json -depth 32| set-content 'C:\loaniq\Server\misysboard_node\addons\fbl_common\config\generated\config.json'
-    become: yes
-    become_user: svcEnkeDeployments@develop.fcbt
-
+    become: true
+    
   
   - name: Change CME
     become_method: runas
     win_shell: ((get-content -path C:\LOANIQ\Server\misysboard_node\model\CME\workspaces\3c5fe6cc-e20a-445f-b9ea-54fcfc7729ab\components\b2c94273-659f-441f-86b3-7fc460a184b7.json -Raw) -replace "{{misysbrdesourceefblcmeqahost}}","{{misysbrdetargetenkefbldevhost}}") | set-content -path C:\LOANIQ\Server\misysboard_node\model\CME\workspaces\3c5fe6cc-e20a-445f-b9ea-54fcfc7729ab\components\b2c94273-659f-441f-86b3-7fc460a184b7.json  
-    become: yes
-    become_user: svcEnkeDeployments@develop.fcbt
- 
+    become: true
+    
 
   - name: Change FBL
     become_method: runas
     win_shell: ((get-content -path C:\LOANIQ\Server\misysboard_node\model\FBL\workspaces\3c5fe6cc-e20a-445f-b9ea-54fcfc7729ab\components\b2c94273-659f-441f-86b3-7fc460a184b7.json -Raw) -replace "{{misysbrdesourceefblcmeqahost}}","{{misysbrdetargetenkefbldevhost}}") | set-content -path C:\LOANIQ\Server\misysboard_node\model\FBL\workspaces\3c5fe6cc-e20a-445f-b9ea-54fcfc7729ab\components\b2c94273-659f-441f-86b3-7fc460a184b7.json
-    become: yes
-    become_user: svcEnkeDeployments@develop.fcbt
-
+    become: true
 
 
   - name: Remove subfolders
     become_method: runas
     win_shell: Get-ChildItem -Path C:\loaniq\Server\misysboard_node\data\Users -Recurse| Foreach-object {Remove-item -Recurse -path $_.FullName }
-    become: yes
-    become_user: svcEnkeDeployments@develop.fcbt
-
-  
+    become: true
+    
 
   - name: Share and set permissions C:\LOANIQ
     become_method: runas
-    become: yes
-    become_user: svcEnkeDeployments@develop.fcbt
+    become: true
     win_share:
       name: LOANIQ
       path: C:\LOANIQ
@@ -99,8 +97,7 @@
 
   - name: Set C:\LOANIQ  folder permissions
     become_method: runas
-    become: yes
-    become_user: svcEnkeDeployments@develop.fcbt
+    become: true 
     win_acl:
       path: C:\LOANIQ
       user: Everyone
@@ -108,20 +105,21 @@
       type: allow
       propagation: 'None'
 
+
   - name: Set C:\LOANIQ folder permissions
-    become_method: runas
-    become: yes
-    become_user: iyakubenko0519@nterprise.net
     win_acl:
       path: C:\LOANIQ
-      user: DBA_Admins@nterprise.net
-      rights: FullControl
       type: allow
-    vars:
-      ansible_become_password: L3tsdanc311!!Ok3
-
+      rights: "{{ item.rights }}"
+      user: "{{ item.users }}"
+    with_items:
+     - { rights: 'ReadAndExecute,ListDirectory', users: Everyone}
+     - { rights: 'FullControl', users: Administrators}
+     - { rights: 'FullControl', users: DBA_Admins}
+    
+    
   #- name: Start a service
   #  win_service:
-  #    name: TapiSrv
+  #    name: "{{ ServiceNameMisysboard }}"
   #    state: started
 
