service and backup

--- a/roles/LOANIQDB/tasks/main.yml
+++ b/roles/LOANIQDB/tasks/main.yml
@@ -1,62 +1,83 @@
+- name: Check that loaniq service started
+  become_method: runas
+  become: yes
+  win_service:
+    name: "{{ LoaniqServiceName }}"
+    state: stopped 
+
+- name: 'Check that the LOANIQ folder exists'
+  win_stat:
+    path: 'C:\LOANIQ'
+    register: stat_file
+
+- name: 'Ensure Release folder exist'
+  win_file:
+    path: 'C:\Releases'
+    state: directory
+    when: stat_file.stat.exists == True
+
+- name: 'Ensure FBL folder exist'
+  win_file:
+    path: "C:\\Releases\\FBL_{{ LatestRelese }}"
+    state: directory
+    when: stat_file.stat.exists == True
+
+- name: 'Quick Backup to Release folder'
+  win_shell: "mv C:\\LOANIQ C:\\Releases\\FBL_{{ LatestRelese }}"
+  become: true
+  become_method: runas
+  become_flags: logon_type=new_credentials logon_flags=netcredentials_only
+  when: stat_file.stat.exists == True
+
 - name: Copy FBLMT to target
   become_method: runas
   win_shell: copy-item "{{sourcemtappfolder}}" -destination "{{targetmtappfolder}}" -recurse
   become: yes
-  become_user: svcEnkeDeployments@develop.fcbt
 
 - name: Change Hostname in server l2sapp.ini file
   become_method: runas
   win_shell: ((get-content -path C:\LOANIQ\SERVER\L2SAPP.ini -Raw) -replace 'fblqamt','enkefbldevmt') | set-content -path  C:\LOANIQ\SERVER\L2SAPP.ini
   become: yes
-  become_user: svcEnkeDeployments@develop.fcbt
 
 - name: rename in LIQSETENV_FBLQAMT.cmd file
   become_method: runas
-  win_shell: "cmd.exe /c rename C:\LOANIQ\SERVER\LIQSETENV_FBLQAMT.cmd C:\LOANIQ\SERVER\LIQSETENV_ENKEFBLDEVMT.cmd"
+  win_shell: "cmd.exe /c rename C:\\LOANIQ\\SERVER\\LIQSETENV_FBLQAMT.cmd C:\\LOANIQ\\SERVER\\LIQSETENV_ENKEFBLDEVMT.cmd"
   become: yes
-  become_user: svcEnkeDeployments@develop.fcbt
 
 - name: Change Hostname in context.xml
   become_method: runas
   win_shell: ((get-content -path C:\LOANIQ\SERVER\Tomcat\conf\context.xml -Raw) -replace 'fblqamt','enkefbldevmt') | set-content -path  C:\LOANIQ\SERVER\Tomcat\conf\context.xml
   become: yes
-  become_user: svcEnkeDeployments@develop.fcbt
 
 - name: Change Hostname in jsqlaccessproperties.xml
   become_method: runas
   win_shell: ((get-content -path C:\LOANIQ\SERVER\Tomcat\jrconf\jsqlaccessproperties.xml -Raw) -replace 'fblqamt','enkefbldevmt') | set-content -path  C:\LOANIQ\SERVER\Tomcat\jrconf\jsqlaccessproperties.xml
   become: yes
-  become_user: svcEnkeDeployments@develop.fcbt
 
 - name: Remove Tomcats logs
   become_method: runas
-  win_shell: "cmd.exe /c del C:\LOANIQ\SERVER\Tomcat\logs\* /s /q"
+  win_shell: "cmd.exe /c del C:\\LOANIQ\\SERVER\\Tomcat\\logs\\* /s /q"
   become: yes
-  become_user: svcEnkeDeployments@develop.fcbt
 
 - name: Remove Tomcats temp folder content
   become_method: runas
-  win_shell: "cmd.exe /c del C:\LOANIQ\SERVER\Tomcat\temp\* /s /q"
+  win_shell: "cmd.exe /c del C:\\LOANIQ\\SERVER\\Tomcat\\temp\\* /s /q"
   become: yes
-  become_user: svcEnkeDeployments@develop.fcbt
 
 - name: Remove Tomcats Jackrabbit folder
   become_method: runas
-  win_shell: "cmd.exe /c rmdir C:\LOANIQ\SERVER\Tomcat\webapps\Jackrabbit /s /q"
+  win_shell: "cmd.exe /c rmdir C:\\LOANIQ\\SERVER\\Tomcat\\webapps\\Jackrabbit /s /q"
   become: yes
-  become_user: svcEnkeDeployments@develop.fcbt
 
 - name: Remove Tomcats liq_APIWebService folder
   become_method: runas
-  win_shell: "cmd.exe /c rmdir C:\LOANIQ\SERVER\Tomcat\webapps\liq_APIWebService /s /q"
+  win_shell: "cmd.exe /c rmdir C:\\LOANIQ\\SERVER\\Tomcat\\webapps\\liq_APIWebService /s /q"
   become: yes
-  become_user: svcEnkeDeployments@develop.fcbt
 
 - name: Remove Tomcats liq_LinkageMap folder
   become_method: runas
-  win_shell: "cmd.exe /c rmdir C:\LOANIQ\SERVER\Tomcat\webapps\liq_LinkageMap /s /q"
+  win_shell: "cmd.exe /c rmdir C:\\LOANIQ\\SERVER\\Tomcat\\webapps\\liq_LinkageMap /s /q"
   become: yes
-  become_user: svcEnkeDeployments@develop.fcbt
 
 - name: Change Hostname in client l2sapp.ini file
   become_method: runas
@@ -70,25 +91,25 @@
     chdir: C:\LOANIQ\SERVER\
     executable: cmd
 
- - name: 'Encrypt password'
-   win_shell: "SCRIPT.CMD"
-   args:
-     chdir: C:\LOANIQ\SERVER\
-     executable: cmd
-     stdin: "{{ LIQPASSWORD }}"
-   register: EncrypredPassword
+- name: 'Encrypt password'
+  win_shell: "SCRIPT.CMD"
+  args:
+    chdir: C:\LOANIQ\SERVER\
+    executable: cmd
+    stdin: "{{ LIQPASSWORD }}"
+  register: EncrypredPassword
 
- - set_fact: pwd="{{ EncrypredPassword.stdout | trim }}"
+- set_fact: pwd="{{ EncrypredPassword.stdout | trim }}"
 
- - debug:
-     msg: "{{ pwd }}"
+- debug:
+    msg: "{{ pwd }}"
 
- - name: 'Replace string'
-   win_lineinfile:
-     path: "{{ item.path }}"
-     regexp: "{{ item.sourceline }}"
-     line: "{{ item.targetline }}"
-   with_items:
+- name: 'Replace string'
+  win_lineinfile:
+    path: "{{ item.path }}"
+    regexp: "{{ item.sourceline }}"
+    line: "{{ item.targetline }}"
+  with_items:
      - { path: "C:\\LOANIQ\\SERVER\\Tomcat\\conf\\context.xml", sourceline: "password=*.*", targetline: 'password="{{ pwd }}"'}
      - { path: "C:\\LOANIQ\\SERVER\\Tomcat\\jrconf\\jsqlaccessproperties.xml", sourceline: '<entry key="DBDefaultPassword*', targetline: '<entry key="DBDafaultPassword">{{ pwd }}</entry>' }
 
@@ -127,7 +148,6 @@
 - name: Set C:\LOANIQ\CLIENT folder permissions
   become_method: runas
   become: yes
-  become_user: svcEnkeDeployments@develop.fcbt
   win_acl:
     path: C:\LOANIQ\CLIENT
     user: Administrators@nterprise.net
@@ -137,7 +157,6 @@
 - name: Create C:\LOANIQ\SERVER share and set permissions
   become_method: runas
   become: yes
-  become_user: svcEnkeDeployments@develop.fcbt
   win_share:
     name: SERVER
     path: C:\LOANIQ\SERVER
@@ -147,7 +166,6 @@
 - name: Set C:\LOANIQ\SERVER folder permissions
   become_method: runas
   become: yes
-  become_user: svcEnkeDeployments@develop.fcbt
   win_acl:
     path: C:\LOANIQ\SERVER
     user: Everyone
@@ -158,7 +176,6 @@
 - name: Set C:\LOANIQ\SERVER folder permissions
   become_method: runas
   become: yes
-  become_user: svcEnkeDeployments@develop.fcbt
   win_acl:
     path: C:\LOANIQ\SERVER
     user: DBA_Admins@nterprise.net
@@ -168,9 +185,15 @@
 - name: Set C:\LOANIQ\SERVER folder permissions
   become_method: runas
   become: yes
-  become_user: svcEnkeDeployments@develop.fcbt
   win_acl:
     path: C:\LOANIQ\SERVER
     user: Administrators@nterprise.net
     rights: FullControl
     type: allow
+
+- name: Check that loaniq service started
+  become_method: runas
+  become: yes
+  win_service:
+    name: "{{ LoaniqServiceName }}"
+    state: started 
