--- a/vars/main.yml
+++ b/vars/main.yml
@@ -30,8 +30,8 @@ targetloaniqfolder: 'C:\'
 #Variables Misysbrde
 ServiceNameMisysboard: 'FBL_Misysboard'
 targetmisysbrdefolder: 'C:\LOANIQ\Server'
-targetamisysbrdefolder: '\\10.10.12.151\loaniq\Server'
-targetmisysboardnodefolder: '\\10.10.12.151\loaniq\Server\misysboard_node'
+misys_source_host: 'FBLQAUXP.develop.fcbt'
+misys_source_node_folder: '\\{{ misys_source_host }}\loaniq\Server\misysboard_node'
 misysbrdesourceeapihost: 'FBLQARAPI'
 misysbrdetargetapihost: 'ENKEFBLDEVAPI'
 misysbrdesourceefblcmeqahost: 'FBLCME-QA'
