--- a/roles/MISYSBRD/tasks/main.yml
+++ b/roles/MISYSBRD/tasks/main.yml
@@ -2,15 +2,13 @@
 
   - name: Stop a service
     win_service:
-      name: "{{ ServiceNameMisysboard }}"
+      name: "{{ Service_Name_Misys }}"
       state: stopped
 
-  
   - name: Check that the LOANIQ folder exists
     win_stat:
       path: 'C:\LOANIQ'
     register: stat_file
-
 
   - name: Ensure Release folder exist
     win_file:
@@ -18,13 +16,11 @@
       state: directory
     when: stat_file.stat.exists == True
 
-
   - name: Ensure FBL folder exist
     win_file:
       path: "C:\\Releases\\FBL_{{ LatestRelese }}"
       state: directory
     when: stat_file.stat.exists == True
-
 
   - name: Quick Backup to Release folder
     win_shell: "mv C:\\LOANIQ C:\\Releases\\FBL_{{ LatestRelese }}"
@@ -33,58 +29,49 @@
     become_flags: logon_type=new_credentials logon_flags=netcredentials_only
     when: stat_file.stat.exists == True
 
-
   - name: Create directory LOANIQ
     win_file:
-      path: "{{targetmisysbrdefolder}}"
+      path: "{{target_misys_folder}}"
       state: directory
-
    
   - name: Copy LOANIQ to target
     become_method: runas
-    win_shell: copy-item "{{targetmisysboardnodefolder}}"  -destination "{{targetmisysbrdefolder}}" -recurse
+    win_shell: copy-item "{{source_misys_folder}}"  -destination "{{target_misys_folder}}" -recurse
     become: true
     
-
   - name: Change Hostname in mb-package.json
     become_method: runas
-    win_shell: ((get-content -path C:\loaniq\Server\misysboard_node\mb-package.json -Raw) -replace "{{misysbrdesourceeapihost}}","{{misysbrdetargetapihost}}") | set-content -path  C:\loaniq\Server\misysboard_node\mb-package.json
+    win_shell: ((get-content -path C:\loaniq\Server\misysboard_node\mb-package.json -Raw) -replace "{{misys_source_api_host}}","{{misys_target_api_host}}") | set-content -path  C:\loaniq\Server\misysboard_node\mb-package.json
     become: true
     
-
   - name: Change liqserver in mb-package.json
     become_method: runas
-    win_shell: ((get-content -path C:\loaniq\Server\misysboard_node\mb-package.json -Raw) -replace "{{misysbrdesourceefblcmeqahost}}","{{misysbrdetargetenkefbldevhost}}") | set-content -path  C:\loaniq\Server\misysboard_node\mb-package.json
+    win_shell: ((get-content -path C:\loaniq\Server\misysboard_node\mb-package.json -Raw) -replace "{{misys_source_fblcmeqa_host}}","{{misys_target_enkefbldev_host}}") | set-content -path  C:\loaniq\Server\misysboard_node\mb-package.json
     become: true
     
-
   - name: Change Hostname in config.json
     become_method: runas
     win_shell: |
       $json = Get-Content 'C:\loaniq\Server\misysboard_node\addons\fbl_common\config\generated\config.json' -raw | ConvertFrom-Json
-      $json.connection | % {if($_.serverName -eq "{{hostnamesourcemisysbrde}}"){$_.serverName="{{hostnametargetmisysbrde}}"}}
+      $json.connection | % {if($_.serverName -eq "{{host_name_source_misys}}"){$_.serverName="{{host_name_target_misys}}"}}
       $json | ConvertTo-Json -depth 32| set-content 'C:\loaniq\Server\misysboard_node\addons\fbl_common\config\generated\config.json'
     become: true
-    
-  
+      
   - name: Change CME
     become_method: runas
-    win_shell: ((get-content -path C:\LOANIQ\Server\misysboard_node\model\CME\workspaces\3c5fe6cc-e20a-445f-b9ea-54fcfc7729ab\components\b2c94273-659f-441f-86b3-7fc460a184b7.json -Raw) -replace "{{misysbrdesourceefblcmeqahost}}","{{misysbrdetargetenkefbldevhost}}") | set-content -path C:\LOANIQ\Server\misysboard_node\model\CME\workspaces\3c5fe6cc-e20a-445f-b9ea-54fcfc7729ab\components\b2c94273-659f-441f-86b3-7fc460a184b7.json  
+    win_shell: ((get-content -path C:\LOANIQ\Server\misysboard_node\model\CME\workspaces\3c5fe6cc-e20a-445f-b9ea-54fcfc7729ab\components\b2c94273-659f-441f-86b3-7fc460a184b7.json -Raw) -replace "{{misys_source_fblcmeqa_host}}","{{misys_target_enkefbldev_host}}") | set-content -path C:\LOANIQ\Server\misysboard_node\model\CME\workspaces\3c5fe6cc-e20a-445f-b9ea-54fcfc7729ab\components\b2c94273-659f-441f-86b3-7fc460a184b7.json  
     become: true
     
-
   - name: Change FBL
     become_method: runas
-    win_shell: ((get-content -path C:\LOANIQ\Server\misysboard_node\model\FBL\workspaces\3c5fe6cc-e20a-445f-b9ea-54fcfc7729ab\components\b2c94273-659f-441f-86b3-7fc460a184b7.json -Raw) -replace "{{misysbrdesourceefblcmeqahost}}","{{misysbrdetargetenkefbldevhost}}") | set-content -path C:\LOANIQ\Server\misysboard_node\model\FBL\workspaces\3c5fe6cc-e20a-445f-b9ea-54fcfc7729ab\components\b2c94273-659f-441f-86b3-7fc460a184b7.json
+    win_shell: ((get-content -path C:\LOANIQ\Server\misysboard_node\model\FBL\workspaces\3c5fe6cc-e20a-445f-b9ea-54fcfc7729ab\components\b2c94273-659f-441f-86b3-7fc460a184b7.json -Raw) -replace "{{misys_source_fblcmeqa_host}}","{{misys_target_enkefbldev_host}}") | set-content -path C:\LOANIQ\Server\misysboard_node\model\FBL\workspaces\3c5fe6cc-e20a-445f-b9ea-54fcfc7729ab\components\b2c94273-659f-441f-86b3-7fc460a184b7.json
     become: true
-
 
   - name: Remove subfolders
     become_method: runas
     win_shell: Get-ChildItem -Path C:\loaniq\Server\misysboard_node\data\Users -Recurse| Foreach-object {Remove-item -Recurse -path $_.FullName }
     become: true
     
-
   - name: Share and set permissions C:\LOANIQ
     become_method: runas
     become: true
@@ -93,7 +80,6 @@
       path: C:\LOANIQ
       full: Administrators
       read: Everyone
-
 
   - name: Set C:\LOANIQ  folder permissions
     become_method: runas
@@ -105,7 +91,6 @@
       type: allow
       propagation: 'None'
 
-
   - name: Set C:\LOANIQ folder permissions
     win_acl:
       path: C:\LOANIQ
@@ -116,10 +101,9 @@
      - { rights: 'ReadAndExecute,ListDirectory', users: Everyone}
      - { rights: 'FullControl', users: Administrators}
      - { rights: 'FullControl', users: DBA_Admins}
-    
-    
+        
   - name: Start a service
     win_service:
-      name: "{{ ServiceNameMisysboard }}"
+      name: "{{ Service_Name_Misys }}"
       state: started
 
